  new/updated data
    glass/cdgm/* - updated to the latest zemax catalog
    glass/sumita/* - updated to the latest zemax catalog
    glass/hoya/* - updated to the latest zemax catalog
    glass/schott/* - updated to the latest zemax catalog
    glass/ohara/* - updated to the latest zemax catalog
    glass/hikari/* - updated to the latest zemax catalog
  updated data (thanks to Heinrich Grabmayr, Ludwig Maximilian University of Munich, Germany, for finding a bug in a formula)
    main/YVO4/Shi-o.yml - fixed formuls, renamed to Shi-o-20C
    main/YVO4/Shi-e.yml - renamed to Shi-e-20C
  new data
    main/YVO4/Shi-o-50C.yml
    main/YVO4/Shi-e-50C.yml
    main/YVO4/Shi-o-80C.yml
    main/YVO4/Shi-e-80C.yml
    main/YVO4/Shi-o-110C.yml
    main/YVO4/Shi-e-110C.yml
    main/YVO4/Shi-o-140C.yml
    main/YVO4/Shi-e-140C.yml
  new data (thanks to Naser Otman, Dalhousie University, Canada, for suggesting data!)
    main/Ag/Yang.yml
  new data(thanks to Matteo Pancaldi, nanoGUNE, San Sebastián, Spain, for suggesting data and initial submission in YAML format!
           thanks to Kristupas K. Tikuišis, Charles University, Prague, Czech Republic, for providing updated data in YAML format!)
    other/alloys/Ni-Fe/Tikuisis_gold150nm.yml
    other/alloys/Ni-Fe/Tikuisis_gold10nm.yml
    other/alloys/Ni-Fe/Tikuisis_bare150nm.yml
    other/alloys/Ni-Fe/Tikuisis_bare10nm.yml
  new data
    other/mixed gases/air/Mathar-1.3.yml
    other/mixed gases/air/Mathar-2.8.yml
    other/mixed gases/air/Mathar-4.35.yml
    other/mixed gases/air/Mathar-7.5.yml
  new data (thanks to Valentyn Volkov, University of Southern Denmark, for submitting data in YAML format!)
    main/Au/Yakubovsky-25nm.yml
    main/Au/Yakubovsky-53nm.yml
    main/Au/Yakubovsky-117nm.yml
  new data (thanks to Giovanni Perotto, Istituto Italiano di Tecnologia, Genova, Italy)
    other/silk/Bombyx mori/Perotto.yml
    other/silk/Bombyx mori/Perotto-uncrystallized.yml
    other/silk/Bombyx mori/Perotto-crystallized.yml