@@ -2,7 +2,7 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "A. R. Beal and H. P. Huges. Kramers-Kronig analysis of the reflectivity spectra of 2H-MoS<sub>2</sub>, 2H-MoSe<sub>2</sub>, and 2H-MoTe<sub>2</sub>, <a href=\"https://doi.org/10.1088/0022-3719/12/5/017\"><i>J. Phys. C</i> <b>12</b>, 881 (2001)</a>"
+REFERENCES: "A. R. Beal and H. P. Huges. Kramers-Kronig analysis of the reflectivity spectra of 2H-MoS<sub>2</sub>, 2H-MoSe<sub>2</sub>, and 2H-MoTe<sub>2</sub>, <a href=\"https://doi.org/10.1088/0022-3719/12/5/017\"><i>J. Phys. C</i> <b>12</b>, 881 (1979)</a>"
 COMMENTS: ""
 DATA:
   - type: tabulated nk
