@@ -1603,7 +1603,7 @@
           data: "main/MoO3/Lajaunie-gamma.yml"
         - DIVIDER: "Thin film"
         - PAGE: Vos
-          name: "Vos et al. 2015: Thin film; n,k 0.019-1 µm"
+          name: "Vos et al. 2016: Thin film; n,k 0.019-1 µm"
           data: "main/MoO3/Vos.yml"
         - PAGE: Stelling
           name: "Stelling et al. 2017: Thin film; n,k 0.301-0.899 µm"
@@ -2124,21 +2124,21 @@
       name: "MoS<sub>2</sub> (Molybdenum disulfide)"
       info: "main/MoS2.html"
       content:
+        - PAGE: Beal
+          name: "Beal and Huges 1979: bulk; n,k 0.081–1.236 µm"
+          data: "main/MoS2/Beal.yml"
+        - PAGE: Zhang
+          name: "Zhang et al. 2015: monolayer film; n,k 0.40-0.75 µm"
+          data: "main/MoS2/Zhang.yml"
         - PAGE: Yim-1.99um
-          name: "Yim et al. 2014: 1.99-µm film; n 0.38-0.9 µm"
+          name: "Yim et al. 2014: 1.99-µm film; n,k 0.38-0.90 µm"
           data: "main/MoS2/Yim-1.99um.yml"
         - PAGE: Yim-3.01um
-          name: "Yim et al. 2014: 3.01-µm film; n 0.38-0.9 µm"
+          name: "Yim et al. 2014: 3.01-µm film; n,k 0.38-0.90 µm"
           data: "main/MoS2/Yim-3.01um.yml"
         - PAGE: Yim-19.88um
-          name: "Yim et al. 2014: 19.88-µm film; n 0.38-0.9 µm"
+          name: "Yim et al. 2014: 19.88-µm film; n,k 0.38-0.90 µm"
           data: "main/MoS2/Yim-19.88um.yml"
-        - PAGE: Zhang
-          name: "Zhang et al. 2013: n 0.4-0.75 µm"
-          data: "main/MoS2/Zhang.yml"
-        - PAGE: Beal
-          name: "Beal and Huges 2001: n 0.081–1.236 µm"
-          data: "main/MoS2/Beal.yml"
     - BOOK: PbS
       name: "PbS (Lead sulfide)"
       info: "main/PbS.html"
@@ -2278,7 +2278,7 @@
       info: "main/MoSe2.html"
       content:
         - PAGE: Beal
-          name: "Beal and Huges 2001: n 0.044–1.161 µm"
+          name: "Beal and Huges 1979: n,k 0.044–1.161 µm"
           data: "main/MoSe2/Beal.yml"
     - BOOK: PbSe
       name: "PbSe (Lead selenide)"
@@ -2558,7 +2558,7 @@
       info: "main/MoTe2.html"
       content:
         - PAGE: Beal
-          name: "Beal and Huges 2001: n 0.069-1.216 µm"
+          name: "Beal and Huges 1979: n,k 0.069-1.216 µm"
           data: "main/MoTe2/Beal.yml"
     - BOOK: PbTe
       name: "PbTe (Lead telluride)"
